	  config.h.in sledge hammers.
	- Fix the incorrect ntfsclone usage example in the man page.  (Szaka)
	- Fix compiler warnings in win32_io.c.  (Yuval)
	- Move constant bswap macros out of the ifdefs in endians.h so they are
	  always available.  (Yuval)
	- Add conditional include of sys/param.h in endians.h which provides
	  endianness support on Cygwin.  (Yuval)

05/04/2004 - 1.9.1 - Make mkntfs create bootable volumes and fixes/updates.
	- Update with SuSE 9.1 beta 1 versions of GNU build system.
	- Fix warnings on powerpc architecture where it would seem char is
	  unsigned so comparisons with -1 cause a warning that comparison is
	  always true/wrong.  (Thanks to Ender for reporting.)
	- Modify meaning of ntfs_volume->nr_mft_records to be the number of
	  initialized mft records, not total mft records.  This makes far more
	  sense and in fact reflects how nr_mft_records is being used in both
	  libntfs and the utilities.
	- Add new API bitmap.h::ntfs_bitmap_{set,clear}_bit().
	- Fix layout.h STANDARD_INFORMATION and FILE_ATTR_FLAGS typedefs by
	  adding the packed attribute where it was missing causing havoc due
	  to 64 bit alignment.  (Yuval Fledel)
	- Fix validation of STANDARD_INFORMATION attribute size in ntfsinfo.c
	  and remove relevant FIXME comments.  (Yuval Fledel)
	- Add new API security.[hc]::ntfs_guid_is_zero() and ntfs_guid_to_mbs().
	- Implement dumping of object id in ntfsinfo.  (Yuval Fledel, me)
	- Copy MFT_RECORD typedef to MFT_RECORD_OLD and modify MFT_RECORD to
	  contain the NTFS 3.1+ specific fields.  Also, update mkntfs and
	  ntfsclone appropriately.
	- Add new API mft.[hc]::ntfs_mft_record_{layout,format}() and make
	  mkntfs use it.
	- Add new API device.[hc]::ntfs_device_partition_start_sector_get() and
	  make mkntfs use it.
	- Provide a new command line option "-p" to mkntfs to allow the user to
	  specify the partition start sector manually.
	- Fix mkntfs and ntfsclone to include sys/ioctl.h.