@@ -7,6 +7,8 @@ xx/xx/2004 - 1.9.2-WIP
 	  always available.  (Yuval)
 	- Add conditional include of sys/param.h in endians.h which provides
 	  endianness support on Cygwin.  (Yuval)
+	- ntfsclone --metadata also saves at least the first 8 KiB of the 
+	  $LogFile (Szaka)
 
 05/04/2004 - 1.9.1 - Make mkntfs create bootable volumes and fixes/updates.
 	- Update with SuSE 9.1 beta 1 versions of GNU build system.
